fix responsive on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,6 +13,7 @@ body {
     margin: 0 auto;
     z-index: 999;
     pointer-events: none;
+    text-align: right;
 }
 
 h2.app-title {
@@ -27,8 +28,8 @@ h2.app-title {
 
 @media (max-width: 768px) {
     h2.app-title {
-        text-align: center;
         zoom: 80%;
+        text-align: center;
     }
 }
 
@@ -37,6 +38,7 @@ h2.app-title {
     background: rgba(255,255,255,0.8);
     color: #2f4356;
     padding: 10px;
+    text-align: left;
 }
 
 .box.hidden {
@@ -55,16 +57,17 @@ h2.app-title {
     text-align: right;
 }
 
-@media (max-width: 768px) {
+@media (max-device-width: 768px) {
     .box {
-        position: fixed;
         zoom: 80%;
     }
     #selectedZone {
         right: 20px;
         margin-left: 20px;
+        display: inline-block;
     }
     #zoneInfo {
+        position: fixed;
         bottom: 20px;
     }
 }
@@ -83,10 +86,3 @@ h2.app-title {
     width: 100%;
     height: 100vh;
 }
-
-/*#map {*/
-    /*width: 100%;*/
-    /*height: 80vh;*/
-    /*border: 2px solid #3498db;*/
-    /*border-radius: 3px;*/
-/*}*/
